# options-algo-trader

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CRITICAL_FIXES_PLAN.md  CROSS_REPO_PLAN.md  DESIGN_DOCUMENT.md  Dockerfile  ENTRY_CRITERIA.md  HOWTO.md  Options_Algo_Trader_Deck.pptx  README.md  REMAINING_FIXES_PLAN.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
.claude/: settings.local.json
.streamlit/: config.toml
backtest_results/: AAPL_2026-04-17.csv  QQQ_2026-04-20.csv  QQQ_2026-04-28.csv  QQQ_2026-04-29.csv  QQQ_sweet_spot_E4_Q4-7_2026-01-02_2026-03-01_2026-04-29.csv  QQQ_sweet_spot_E4_Q4-7_2026-04-29.csv  SPY_2026-04-17.csv  SPY_2026-04-20.csv  SPY_2026-04-28.csv  SPY_2026-04-29.csv  SPY_sweet_spot_E4_Q4-7_2026-01-02_2026-03-01_2026-04-29.csv  SPY_sweet_spot_E4_Q4-7_2026-04-29.csv  SPY_sweet_spot_E7_Q4-7_2026-04-29.csv  cascade_comparison_2026-04-23.csv
config/: settings.py
dashboard/: app.py
mcp_server/: robinhood_mcp_server.py
options_agent/: .gitignore  DESIGN_DOCUMENT.md  README.md  com.options-agent.sweet-spot.plist  requirements.txt
scripts/: backtest.py  backtest_sweet_spot.py  run_agent.py  scan_sweet_spot_today.py  test_entry_offsets.py  test_replay.py  test_weights.py
src/: agent.py  audit.py  backtester.py  exceptions.py  llm_adapter.py  market_analyzer.py  mcp_client.py  momentum_cascade.py  opening_range.py  recent_momentum.py  risk_manager.py  signal_tuner.py  strategy_selector.py
tests/: conftest.py  smoke_test_new_features.py  test_agent.py  test_audit.py  test_market_analyzer.py  (+3 more)
(+59 files in other folders)
